[package]
name = "steam-controller-dsu"
version = "0.1.0"
edition = "2024"

[dependencies]
scdsu-cli = { path = "crates/cli" }

[[bin]]
name = "steam-controller-dsu"
path = "crates/cli/src/main.rs"

[workspace]
members = ["crates/core", "crates/cli"]
resolver = "3"

[workspace.dependencies]
log = "0.4"
ctrlc = { version = "3", features = ["termination"] }
