[package]
name = "steam-controller-dsu"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "DSU (CemuHook) server for the Gyro on Steam Controller (2026)"
homepage = "https://github.com/njanke96/steam-controller-dsu"
repository = "https://github.com/njanke96/steam-controller-dsu"
documentation = "https://github.com/njanke96/steam-controller-dsu"
keywords = ["steam", "controller", "cemuhook", "dsu", "hid"]

[dependencies]
scdsu-cli = { path = "crates/cli", version = "0.1.3" }

[workspace]
members = ["crates/core", "crates/cli"]
resolver = "3"

[workspace.dependencies]
log = "0.4"
ctrlc = { version = "3", features = ["termination"] }
