[package]
name = "scdsu-cli"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "cli crate for steam-controler-dsu"
homepage = "https://github.com/njanke96/steam-controller-dsu"
repository = "https://github.com/njanke96/steam-controller-dsu"
documentation = "https://github.com/njanke96/steam-controller-dsu"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = { workspace = true }
ctrlc = {workspace = true }
scdsu-core = { path = "../core", version = "0.1.3" }
