[package]
name = "scdsu-core"
version = "0.1.5"
edition = "2024"
license = "MIT"
description = "core library crate for steam-controler-dsu"
homepage = "https://github.com/njanke96/steam-controller-dsu"
repository = "https://github.com/njanke96/steam-controller-dsu"
documentation = "https://github.com/njanke96/steam-controller-dsu"

[dependencies]
hidapi = "2.6"
thiserror = "2.0.18"
log = { workspace = true }
